# fed_trainers

./: .gitmodules  Dockerfile  README.md  dataset.py  emg_utils.py  femnist_utils.py  gep_utils.py  gp_utils.py  hyper_sweeper.sh  keypressemg_utils.py  model.py  pyproject.toml  requirements.txt  signal_stft.py  ssh_local_port.sh  sweep_utils.py  sweeper.py  sweeper_cifar10_dp_no_gp.py  sweeper_cifar10_gep_no_gp.py  sweeper_cifar10_gep_public_no_gp.py  sweeper_cifar10_no_gp.py  sweeper_keypressemg_gep_aux_no_gp.py  sweeper_keypressemg_gep_private_no_gp.py  sweeper_keypressemg_gep_public_no_gp.py  sweeper_keypressemg_gep_public_private_no_gp.py  sweeper_keypressemg_sgd_dp_no_gp.py  sweeper_putemg_gep_private_no_gp.py  sweeper_putemg_gep_public_no_gp.py  sweeper_putemg_gep_public_private_no_gp.py  sweeper_putemg_nonlinear_gep_public_private_no_gp.py  sweeper_putemg_sgd_dp_no_gp.py  trainer.py  trainer_cifar10_dp_no_gp.py  trainer_cifar10_gep_no_gp.py  trainer_cifar10_gep_public_no_gp.py  trainer_cifar10_no_gp.py  trainer_femnist_dp_no_gp.py  trainer_femnist_gep_no_gp.py  trainer_femnist_gep_public_no_gp.py  trainer_gep_aux_no_gp.py  (+19 more)
common/: gep_utils.py  model.py  utils.py
data/: Alphabetically_Sorted_QWERTY_Distance_Matrix.csv
datasets/: emg_utils.py
fed_trainers/datasets/: femnist_utils.py
fed_trainers/sweepers/: sweep_utils.py
fed_trainers/sweepers/dp_sgd/: sweeper_cifar10_dp_no_gp.py  sweeper_keypressemg_sgd_dp_no_gp.py  sweeper_putemg_sgd_dp_no_gp.py
fed_trainers/sweepers/gep/: sweeper_cifar10_gep_public_no_gp.py  sweeper_keypressemg_gep_aux_no_gp.py  sweeper_keypressemg_gep_private_no_gp.py  sweeper_keypressemg_gep_public_no_gp.py  sweeper_keypressemg_gep_public_private_no_gp.py  sweeper_putemg_gep_private_no_gp.py  sweeper_putemg_gep_public_no_gp.py  sweeper_putemg_gep_public_private_no_gp.py
fed_trainers/trainers/: model.py  rdp_accountant.py  utils.py
fed_trainers/trainers/adadpigu/: adaclip.py  trainer_adadpigu_no_gp.py  trainer_cifar10_adadpigu_no_gp.py  utils.py
fed_trainers/trainers/dp_sgd/: trainer_cifar10_dp_no_gp.py  trainer_femnist_dp_no_gp.py  trainer_keypressemg_sgd_dp_no_gp.py  trainer_putEMG_dp_no_gp.py  trainer_sgd_dp_no_gp.py
fed_trainers/trainers/gep/: gep_utils.py  trainer_cifar10_gep_no_gp.py  trainer_cifar10_gep_public_no_gp.py  trainer_femnist_gep_no_gp.py  trainer_femnist_gep_public_no_gp.py  trainer_gep_aux_no_gp.py  trainer_gep_private_no_gp.py  (+9 more)
no_gp/trainers/: trainer_gep_private_no_gp.py  trainer_gep_public_no_gp.py  trainer_sgd_dp_no_gp.py
notebooks/: exp_keypressemg_analysis.ipynb  experiment_analysis.ipynb
with_gp/trainers/: gp_utils.py  trainer_gep_private_with_gp.py  trainer_gep_public_with_gp.py  trainer_sgd_dp_with_gp.py
