[tool.poetry]
name = "fed-trainers"
version = "0.1.0"
description = ""
authors = ["moshe <moshebeutel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.0"
torchvision = "^0.18"
tqdm = "^4.66.4"
wandb = "^0.17.4"
#gpytorch = {path = "gpytorch"}
#pyeeg = {path = "pyeeg"}
keypressemg = {path = "../sEMG-TypingDatabase", develop = true}
#keypressemg = {git = "https://github.com/ANSLab-UHN/sEMG-TypingDatabase.git", rev = "ver_0_1_1", develop = true}
pandas = "^2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
