[tool.poetry]
name = "fed-trainers"
version = "0.1.0"
description = ""
authors = ["moshe <moshebeutel@gmail.com>"]
readme = "README.md"

packages = [
    { include = "fed_trainers" },
]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.0"
torchvision = "^0.18"
tqdm = "^4.66.4"
wandb = "^0.17.4"
#gpytorch = {path = "gpytorch"}
#pyeeg = {path = "pyeeg"}
# keypressemg = {path = "../sEMG-TypingDatabase", develop = true}
#keypressemg = {git = "https://github.com/ANSLab-UHN/sEMG-TypingDatabase.git", rev = "ver_0_1_1", develop = true}
pandas = "^2.2"
scikit-learn = "^1.7.2"
backpack-for-pytorch = "^1.7.1"

[tool.poetry.scripts]
sweep_cifar10_dp = 'fed_trainers.sweepers.dp_sgd.sweeper_cifar10_dp_no_gp:main'
sweep_cifar10_gep_public = 'fed_trainers.sweepers.gep.sweeper_cifar10_gep_public_no_gp:main'

# Default parametrs train
train_cifar10_adadpigu = 'fed_trainers.trainers.adadpigu.trainer_cifar10_adadpigu_no_gp:main'
train_cifar10_sgd_dp = 'fed_trainers.trainers.dp_sgd.trainer_cifar10_dp_no_gp:main'



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
